[package]
name = "fixed_index_vec"
version = "0.1.0"
edition = "2021"
authors = ["Jorge Rico Vivas <jorgericosoftware@gmail.com>"]
license-file = "LICENSE.txt"
description = "Vec-like structure where indexes are kept for values even when removing others"
repository = "https://github.com/JorgeRicoVivas/indexed_valued_enums"
keywords = ["valued", "enum"]
categories = ["no-std", "no-std::no-alloc"]

[lib]
crate-type = ["lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]